--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-      <title>Project 6: Particle System | CIS 566</title>
+      <title>They are a million! | Byumjin</title>
       <style>
         html, body {
           margin: 0;
